# informatics_custom_apps

./: .gitignore  README.md  pyproject.toml
informatics_custom_apps/: hooks.py  modules.txt
informatics_custom_apps/ripl_customized_apps/doctype/weighment_issue_management/: test_weighment_issue_management.py  weighment_issue_management.js  weighment_issue_management.json  weighment_issue_management.py
informatics_custom_apps/ripl_customized_apps/report/department_wise_attendance/: department_wise_attendance.js  department_wise_attendance.json  department_wise_attendance.py
informatics_custom_apps/ripl_customized_apps/report/gl_report/: gl_report.js  gl_report.json  gl_report.py
